[feat] list functions handler
