# api/openapi.yaml
@@ -37,7 +37,23 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UploadResponse'
-
+  /list-functions:
+    get:
+      summary: Get all functions for the authenticated user
+      operationId: GetUserFunctions
+      responses:
+        "200":
+          description: A list of functions and related entities
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FunctionEntity'
+        "400":
+          $ref: '#/components/responses/BadRequest'
+        "404":
+          $ref: '#/components/responses/NotFound'
 components:
   schemas:
     HealthResponse:
@@ -46,6 +62,18 @@ components:
       properties:
         status:
           type: string
+    FunctionEntity:
+      type: object
+      required: [ id, name, status, created_at ]
+      properties:
+        id:
+          type: string
+          example: "fn_98234"
+
+        status:
+          type: string
+          example: "READY"
+
     UploadResponse:
       type: object
       required: [ status ]
